--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -251,3 +251,30 @@
   white-space: pre-wrap; /* Allows wrapping of long lines */
   word-wrap: break-word; /* Breaks long words */
 }
+.lever-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.lever {
+  width: 50px;
+  height: 200px;
+  border: 1px solid #000;
+  position: relative;
+}
+
+.lever-fill {
+  width: 100%;
+  background-color: #8884d8;
+  position: absolute;
+  bottom: 0;
+}
+
+.lever-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 10px;
+}
