--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -139,10 +139,12 @@
 
 .estop-button {
   width: 100%;
+  height: 5rem;
   padding: 12px;
   background-color: #f56565;
   color: #ffffff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: large;
   border-radius: 8px;
   border: 1px solid #e2e8f0;
   text-align: center;
