--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -107,6 +107,37 @@
   padding: 4px;
 }
 
+.camera-right-button {
+  position: absolute;
+  top: 150px;
+  left: 575px;
+  background-color: #2d3748;
+  color: #ffffff;
+  padding: 4px;
+  border: 1px solid #e2e8f0;
+  text-align: center;
+  transition: background-color 0.3s;
+}
+
+.camera-right-button:hover {
+  background-color: #1a202a;
+}
+
+.camera-left-button {
+  position: absolute;
+  top: 150px;
+  background-color: #2d3748;
+  color: #ffffff;
+  padding: 4px;
+  border: 1px solid #e2e8f0;
+  text-align: center;
+  transition: background-color 0.3s;
+}
+
+.camera-left-button:hover {
+  background-color: #1a202a;
+}
+
 .command-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -137,7 +168,7 @@
   color: white;
 }
 
-.estop-button {
+.estop-stop-button {
   width: 100%;
   padding: 12px;
   background-color: #f56565;
@@ -149,8 +180,24 @@
   transition: background-color 0.3s;
 }
 
-.estop-button:hover {
+.estop-stop-button:hover {
   background-color: #e53e3e;
+}
+
+.autonomous-stop-button {
+  width: 100%;
+  padding: 12px;
+  background-color: #2fde4c;
+  color: #ffffff;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border-radius: 8px;
+  border: 1px solid #e2e8f0;
+  text-align: center;
+  transition: background-color 0.3s;
+}
+
+.autonomous-stop-button:hover {
+  background-color: #28bf41;
 }
 
 .move-control {
@@ -277,4 +324,36 @@
   align-items: center;
   text-align: center;
   margin-top: 10px;
+}
+
+.motor-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.motor-controls {
+  margin-top: 1rem
+}
+
+.motor-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem;
+  margin: 0.5rem 0;
+}
+
+.motor-button{
+  padding: 0.5rem;
+  background-color: #444;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.motor-button:hover {
+  background-color: #555;
 }
