--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -64,6 +64,7 @@
 }
 
 .panel {
+
   background-color: #ffffff;
   padding: 16px;
   border-radius: 8px;
@@ -97,6 +98,9 @@
   object-fit: cover;
 }
 
+.camera-panel {
+  display:flex
+}
 .camera-icon {
   position: absolute;
   top: 8px;
