--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -99,7 +99,7 @@
 }
 
 .camera-panel {
-  display:flex
+  display:flex;
 }
 .camera-icon {
   position: absolute;
@@ -113,8 +113,8 @@
 
 .camera-right-button {
   position: absolute;
-  top: 150px;
-  left: 575px;
+  top: 50px;
+  left: 300px;
   background-color: #2d3748;
   color: #ffffff;
   padding: 4px;
@@ -129,8 +129,8 @@
 
 .camera-left-button {
   position: absolute;
-  top: 150px;
-  left: 20px;
+  top: 50px;
+  left: 0px;
   background-color: #2d3748;
   color: #ffffff;
   padding: 4px;
